syntax = "proto3";
package ibc.lightclients.corda.v1;

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/light-clients/xx-corda/types";
option java_multiple_files = true;
option java_outer_classname = "AdminProto";

import "google/protobuf/empty.proto";

service AdminService {
  rpc Shutdown (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}